---------------------------------------------------------------------------------------------------
Version: 0.1.3
Date: ???
  Changes:
    - Quality bonuses for vehicle guns and inventory
    - Support for "smoke-with-trigger"
  Bug fixes:
    - Fixes for module definitions without slots
---------------------------------------------------------------------------------------------------
Version: 0.1.2
Date: 2023.11.05
  Changes:
    - Recycling items with multiple outputs recycle to self
    - Repair and science packs now get +100% quality bonuses
    - Support for recipes with single products named differently than their main product
    - Better quality icons
    - Better tip images
  Bug fixes:
    - Modules can now be recycled
    - Fixed crash in upgrade where player cursor becomes invalid
---------------------------------------------------------------------------------------------------
Version: 0.1.1
Date: 2023.11.04
  Changes:
    - Added ability to set max on m.add modifiers
  Bug fixes:
    - Fixed crash when trying to module building with 0 module slots
    - Fixed downgrade losing quality of entities
    - Fixed max value exceeded in power poles
---------------------------------------------------------------------------------------------------
Version: 0.1.0
Date: 2023.11.04
  Info:
    - Initial release.
  Locale:
    - English is available.
  License:
    - Using MIT License. Document included.